tests/it/snapshots/it__extract_equivalence__rule_features_collaboration.snap
---
source: tests/it/extract_equivalence.rs
expression: features
---
Features {
    id: "collaboration",
    fields: {},
    body_lines: 9,
    rendered_lines: Some(
        9,
    ),
    rendered_chars: Some(
        327,
    ),
    headings: [
        "Collaboration — pushback is the point",
        "Challenge gaps, never paper over them",
    ],
    sections: [
        Section {
            heading: "Collaboration — pushback is the point",
            body: "\n`temper` is a design-led project. The harness enforces mechanics; judgment is\nyours. The most useful thing you do is surface what's wrong or undecided.\n\n## Challenge gaps, never paper over them\n\nIf a spec section is ambiguous, stop and surface it — do not invent intent to\nkeep moving.",
        },
        Section {
            heading: "Challenge gaps, never paper over them",
            body: "\nIf a spec section is ambiguous, stop and surface it — do not invent intent to\nkeep moving.",
        },
    ],
    source_dir: Some(
        "rules",
    ),
    directives: [],
    fenced_blocks: [],
    nested_members: [],
    satisfies: [],
    edge_placements: None,
}
