tests/it/snapshots/it__extract_equivalence__rule_features_rust.snap
---
source: tests/it/extract_equivalence.rs
expression: features
---
Features {
    id: "rust",
    fields: {
        "paths": Array [
            String("src/**/*.rs"),
            String("tests/**/*.rs"),
        ],
    },
    body_lines: 8,
    rendered_lines: Some(
        8,
    ),
    rendered_chars: Some(
        233,
    ),
    headings: [
        "Rust conventions",
        "Errors & diagnostics",
    ],
    sections: [
        Section {
            heading: "Rust conventions",
            body: "\nPrefer a clone over a lifetime fight. This tool is I/O-bound over kilobyte\nfiles; zero-copy buys nothing and costs readability.\n\n## Errors & diagnostics\n\nModel errors with `thiserror`, surface them with `miette`.",
        },
        Section {
            heading: "Errors & diagnostics",
            body: "\nModel errors with `thiserror`, surface them with `miette`.",
        },
    ],
    source_dir: Some(
        "rules",
    ),
    directives: [],
    fenced_blocks: [],
    nested_members: [],
    satisfies: [],
    edge_placements: None,
}
