tests/it/snapshots/it__extract_equivalence__skill_features_coordinate.snap
---
source: tests/it/extract_equivalence.rs
expression: features
---
Features {
    id: "coordinate",
    fields: {
        "allowed-tools": Array [
            String("Task"),
            String("Read"),
            String("Edit"),
        ],
        "description": String("Use when driving a complex task through an agent team — parallel exploration across independent axes converging on a shared artifact, with an adversarial reviewer gate. NOT for single-axis or research-only work."),
        "license": String("MIT"),
        "name": String("coordinate"),
    },
    body_lines: 20,
    rendered_lines: Some(
        20,
    ),
    rendered_chars: Some(
        467,
    ),
    headings: [
        "Coordinate",
        "When to use",
        "Example",
        "Caveats",
    ],
    sections: [
        Section {
            heading: "Coordinate",
            body: "\nDrive a complex task through a team of agents. See the playbook for the full\nreference on phases, fan-out, and the reviewer gate.\n\n## When to use\n\nParallel exploration across three or more independent axes, converging on a\nshared artifact, with an adversarial reviewer gate before shipping.\n\n## Example\n\n```sh\n# not a heading — a shell comment inside a fence\ntemper coordinate --agents 6\n```\n\n### Caveats ###\n\nNOT for single-axis or research-only work.",
        },
        Section {
            heading: "When to use",
            body: "\nParallel exploration across three or more independent axes, converging on a\nshared artifact, with an adversarial reviewer gate before shipping.\n",
        },
        Section {
            heading: "Example",
            body: "\n```sh\n# not a heading — a shell comment inside a fence\ntemper coordinate --agents 6\n```\n\n### Caveats ###\n\nNOT for single-axis or research-only work.",
        },
        Section {
            heading: "Caveats",
            body: "\nNOT for single-axis or research-only work.",
        },
    ],
    source_dir: Some(
        "coordinate",
    ),
    directives: [],
    fenced_blocks: [],
    nested_members: [],
    satisfies: [],
    edge_placements: None,
}
